--- a/AnimationEditor/WindowsFormsApplication1/WindowsFormsApplication1/Form1.resx
+++ b/AnimationEditor/WindowsFormsApplication1/WindowsFormsApplication1/Form1.resx
@@ -151,10 +151,20 @@
   <metadata name="toolTip1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>152, 17</value>
   </metadata>
+  <data name="AddFrameButton.ToolTip" xml:space="preserve">
+    <value>Click to add the frame to the frame list.
+NOTE: You can only add a frame to the 
+frame list once you have drawn a Frame 
+Rectangle, a Collision Rectangle, an Anchor
+point, and at least one Particle point.</value>
+  </data>
+  <metadata name="toolTip1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>152, 17</value>
+  </metadata>
   <metadata name="timer1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>265, 17</value>
   </metadata>
   <metadata name="$this.TrayHeight" type="System.Int32, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>70</value>
+    <value>25</value>
   </metadata>
 </root>
